--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,8 @@
 [package]
-name = "scharsch-bot-velocity"
+name = "scharschbot_core"
 version = "0.1.0"
 edition = "2021"
+authors = ["sharktheone"]
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
@@ -11,6 +12,3 @@ serde = { version = "1", features = ["derive"] }
 serde_json = "1.0.96"
 url = "2.3.1"
 ws = "0.9.2"
-
-[lib]
-crate-type = ["cdylib"]
