--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,8 @@ authors = ["sharktheone"]
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+chrono = "0.4.24"
+colored = "2.0.0"
 jni = "0.21.1"
 serde = { version = "1", features = ["derive"] }
 serde_json = "1.0.96"
