--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,7 @@ authors = ["sharktheone"]
 chrono = "0.4.24"
 colored = "2.0.0"
 jni = "0.21.1"
+rust-embed = "6.6.1"
 serde = { version = "1", features = ["derive"] }
 serde_json = "1.0.96"
 url = "2.3.1"
