--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,5 +13,6 @@ jni = "0.21.1"
 rust-embed = "6.6.1"
 serde = { version = "1", features = ["derive"] }
 serde_json = "1.0.96"
+serde_yaml = "0.9.21"
 url = "2.3.1"
 ws = "0.9.2"
